flux/apps/base/kgateway-system/gateway/agentgateway1.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentgateway1
  namespace: kgateway-system
  labels:
    app: agentgateway1
spec:
  gatewayClassName: agentgateway
  infrastructure:
    parametersRef:
      group: agentgateway.dev
      kind: AgentgatewayParameters
      name: agentgateway1-otel
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
  - protocol: HTTPS
    port: 8443
    name: https
    hostname: "agentgateway.kubegit.com"
    tls:
      mode: Terminate
      certificateRefs:
      - name: agentgateway-tls
        kind: Secret
